--- a/app/src/main/res/layout/task_view.xml
+++ b/app/src/main/res/layout/task_view.xml
@@ -1,30 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        xmlns:android="http://schemas.android.com/apk/res/android">
     <TextView
-        android:id="@+id/taskTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/doneButton"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_toLeftOf="@+id/doneButton"
-        android:gravity="center_vertical"
-        android:text="New Text"
-        android:textSize="20dp" />
-
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+                android:text="@string/newText"
+            android:id="@+id/taskTextView"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:textSize="20dp"
+            android:layout_toLeftOf="@+id/doneButton"
+            android:layout_alignBottom="@+id/doneButton"
+            android:gravity="center_vertical"/>
     <Button
-        android:id="@+id/doneButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:onClick="onDoneButtonClick"
-        android:text="Bought" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/details"
+            android:id="@+id/detailButton"
+            android:onClick="DetailViewClick"
+            android:layout_alignParentTop="true"
+            android:layout_toLeftOf="@+id/doneButton"
+            android:layout_toStartOf="@+id/doneButton" />
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/done"
+            android:id="@+id/doneButton"
+            android:onClick="onDoneButtonClick"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
