--- a/app/src/main/res/layout/task_detail_view.xml
+++ b/app/src/main/res/layout/task_detail_view.xml
@@ -11,5 +11,13 @@
         android:text="New Text"
         android:id="@+id/textView"
         android:layout_weight="1" />
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@android:id/list"
+        android:layout_weight="1"
+        android:layout_margin="5dp"/>
+
 </RelativeLayout>
 
