--- a/app/src/main/res/layout/task_detailled_view.xml
+++ b/app/src/main/res/layout/task_detailled_view.xml
@@ -5,21 +5,24 @@
     android:layout_height="fill_parent"
     >
 
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="match_parent"
+        android:layout_height="350dp"
+        android:layout_margin="5dp" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/textView"
-        android:layout_weight="1" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/details"
-        android:id="@+id/detailButton"
-        android:onClick="onDetailsButtonClick"
+        android:id="@+id/taskTextView"
         android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textSize="20dp"
         android:layout_toLeftOf="@+id/doneButton"
-        android:layout_toStartOf="@+id/doneButton" />
+        android:layout_alignBottom="@+id/doneButton"
+        android:gravity="center_vertical"/>
+
+
 </RelativeLayout>
 
