--- a/app/src/main/res/layout/task_detail.xml
+++ b/app/src/main/res/layout/task_detail.xml
@@ -10,132 +10,151 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.TodoList.LoginActivity">
 
-    <!-- Login progress -->
-    <ProgressBar
-        android:id="@+id/login_progress"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:visibility="gone" />
-
-    <ScrollView
-        android:id="@+id/login_form"
+  <LinearLayout
+        android:id="@+id/email_login_form"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-        <LinearLayout
-            android:id="@+id/email_login_form"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+        <!-- <AutoCompleteTextView
+             android:id="@+id/email"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:hint="@string/prompt_email"
+             android:inputType="textEmailAddress"
+             android:maxLines="1"
+             android:singleLine="true" />
 
-           <!-- <AutoCompleteTextView
-                android:id="@+id/email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/prompt_email"
-                android:inputType="textEmailAddress"
-                android:maxLines="1"
-                android:singleLine="true" />
+         <EditText
+             android:id="@+id/password"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:hint="@string/prompt_password"
+             android:imeActionId="@+id/login"
+             android:imeActionLabel="@string/action_sign_in_short"
+             android:imeOptions="actionUnspecified"
+             android:inputType="textPassword"
+             android:maxLines="1"
+             android:singleLine="true" />
 
-            <EditText
-                android:id="@+id/password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/prompt_password"
-                android:imeActionId="@+id/login"
-                android:imeActionLabel="@string/action_sign_in_short"
-                android:imeOptions="actionUnspecified"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:singleLine="true" />
+         <Button
+             android:id="@+id/email_sign_in_button"
+             style="?android:textAppearanceSmall"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:layout_marginTop="16dp"
+             android:text="@string/action_sign_in"
+             android:textStyle="bold" />
 
-            <Button
-                android:id="@+id/email_sign_in_button"
-                style="?android:textAppearanceSmall"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/action_sign_in"
-                android:textStyle="bold" />
+         <Button
+             android:id="@+id/register_button"
+             style="?android:textAppearanceSmall"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:layout_marginTop="16dp"
+             android:text="@string/action_register"
+             android:textStyle="bold" />-->
 
-            <Button
-                android:id="@+id/register_button"
-                style="?android:textAppearanceSmall"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/action_register"
-                android:textStyle="bold" />-->
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="176dp"
+            android:layout_height="112dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:text="Beschreiben Sie die Aufgabe bitte detailliert"
+            android:textColor="#A4C639" />
 
-
-            <EditText
-                android:id="@+id/task_description"
-                android:inputType="textMultiLine"
-                android:lines="8"
-                android:minLines="6"
-                android:gravity="top|left"
-                android:maxLines="10"
-                android:layout_height="wrap_content"
-                android:layout_width="fill_parent"
-                android:scrollbars="vertical" />
-
-            <EditText
-                android:id="@+id/task_relevance"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="text" />
-
-            <CheckBox
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="@string/text_checkbox"
-                android:onClick="clickCheckboxFunction"/>
-
-            <EditText
-                android:id="@+id/myNumber"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:digits="0123456789."
-                android:inputType="numberDecimal"
-                />
-
-
+        <EditText
+            android:id="@+id/task_description"
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:gravity="top|left"
+            android:inputType="textMultiLine"
+            android:lines="8"
+            android:maxLines="10"
+            android:minLines="6"
+            android:scrollbars="vertical" />
+            <requestFocus />
 
         </LinearLayout>
-    </ScrollView>
-
-</LinearLayout>
-
-
-    <!--<CheckBox
-        android:id="@+id/chkAndroid"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/chk_android"
-        android:checked="true" />
-
-    <CheckBox
-        android:id="@+id/chkWindows"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/chk_windows" />
-
-    <Button
-        android:id="@+id/btnDisplay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/btn_display" />
-
-
-
-    <DatePicker
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleX="0.7"
-        android:scaleY="0.7"
-        android:gravity="bottom|start"
-        android:id="@+id/date_picker"/>-->
+        android:layout_height="157dp">
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="176dp"
+            android:layout_height="138dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:text="Bis wann muss die Aufgabe erledigt sein?"
+            android:textColor="#A4C639" />
+
+        <EditText
+            android:id="@+id/task_due_date"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:inputType="numberDecimal" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="176dp">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="176dp"
+            android:layout_height="112dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:text="Handelt es sich um ein Favourite To Do?"
+            android:textColor="#A4C639" />
+
+        <CheckBox
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/task_favourite"
+            android:onClick="clickCheckboxFunction"
+            android:text="@string/text_checkbox" />
+
+    </LinearLayout>
+
+        <EditText
+            android:id="@+id/myNumber"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:digits="0123456789."
+            android:inputType="numberDecimal" />
 
 
+        <!--<CheckBox
+            android:id="@+id/chkAndroid"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/chk_android"
+            android:checked="true" />
+
+        <CheckBox
+            android:id="@+id/chkWindows"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/chk_windows" />
+
+        <Button
+            android:id="@+id/btnDisplay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_display" />
+
+
+
+        <DatePicker
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleX="0.7"
+            android:scaleY="0.7"
+            android:gravity="bottom|start"
+            android:id="@+id/date_picker"/>-->
+
+
+    </LinearLayout>
